--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="help-tip" id="help_text">
             <p><b>QuickCheck zur Beurteilung der Anforderungen an die digitalen Kundenschnittstellen</b></p></div>
 		
-        <div>
-            <input type="button" id="button1" value="Fragebogen auswerten" style="background-color:lightseagreen;color:darkblue;width:200px; height:25px">
-            <input type="button" id="button2" value="Fragebogen zurücksetzen" style="background-color:salmon;color:darkblue;width:200px; height:25px">
+        <div>       
+            <input type="button" id="button1" onclick="function_button1()" value="Fragebogen auswerten" style="background-color:lightseagreen;color:darkblue;width:200px; height:25px">
+            <input type="button" id="button2"  onclick="function_button2()" value="Fragebogen zurücksetzen" style="background-color:salmon;color:darkblue;width:200px; height:25px">
   		    <input type="text" id="check" value="beginn" style="font-weight: bold;text-align: center;width: 300px;height:25px;background-color:powderblue;border: 0"  readonly> 
         </div>
         
@@ -260,16 +260,11 @@
 
         <hr size="2" width=95% color="cornflowerblue"> 
 
-        <div>
-            <input type="button" id="button1" value="Fragebogen auswerten" style="background-color:lightseagreen;color:darkblue;width:200px; height:25px">
-            <input type="button" id="button2" value="Fragebogen zurücksetzen" style="background-color:salmon;color:darkblue;width:200px; height:25px">
-        </div>
-
     </body>
 
 	<!-- Scripts -->
 	<!--<script type="text/javascript" src="{{ url_for('static', filename='java_script_V14.js') }}"></script>--->
-    <script src="java_script_V98.js"></script>
+    <script src="java_script_V101.js"></script>
 
 </html>
 
