--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         <hr size="2" width=95% color="cornflowerblue"> 
           
         <!-- neu zum Download der Txt datei-->
-        <input type="button" id="button2" onclick="download('neuer versch', 'test', 'utf8')" value="file download" style="background-color:rgb(226,240,217);color:darkblue;width:285px; height:25px;font-weight: bold;text-align: center;border:0;font-family: Arial;font-size:18">
+        <input type="button" id="button2" onclick="download('neuer versch', 'Quick_Check', 'utf8')" value="file download" style="background-color:rgb(226,240,217);color:darkblue;width:285px; height:25px;font-weight: bold;text-align: center;border:0;font-family: Arial;font-size:18">
 
         </basefont>
     </body>
