--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     <script src='dependency/jquery.min.js'></script>
 
 	</head>
+    <! einschub google analytics --!>
+    
+    <!-- Google tag (gtag.js) --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TWJ6XL0VCF"></script> 
+    <script> 
+        window.dataLayer = window.dataLayer || []; 
+        function gtag(){dataLayer.push(arguments);} 
+        gtag('js', new Date()); 
+        gtag('config', 'G-TWJ6XL0VCF'); 
+    </script>
     
     <link rel="icon" type="image/x-icon" scr="logo.png" />
 	<body>
